--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,11 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - cron-data:/data
-      - cron-logs:/var/log
+      - ./data:/data
+      - ./logs:/var/log/cron
     environment:
       - PORT=5000
+      - TZ=America/Sao_Paulo
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5000/health"]
@@ -16,9 +17,3 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-
-volumes:
-  cron-data:
-    driver: local
-  cron-logs:
-    driver: local
